@@ -14,6 +14,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - rfe #1688975 [display] enable copying of auto increment by default
 - bug #2355753 [core] do not bail out creating session on any PHP warning
 - bug #2355925 [display] properly update tooltips in navigation frame
+- bug #2355923 [core] do not use ctype if it is not available
 
 3.1.0.0 (2008-11-28)
 + [auth] Support for Swekey hardware authentication,
